--- a/performance_evaluation_xrays_model1.ipynb
+++ b/performance_evaluation_xrays_model1.ipynb
@@ -25,7 +25,9 @@
         "id": "view-in-github",
         "colab_type": "text"
       },
-      "source": []
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/amura/xray-machinelearning/blob/model_evaluation/performance_evaluation_xrays_model1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "code",
@@ -34,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yJq5IFi7kSex",
-        "outputId": "b851e403-5857-43bf-c0d5-5e60e0d08af0"
+        "outputId": "d7eac337-16f4-474a-9d91-41b820677bc7"
       },
       "source": [
         "gpu_info = !nvidia-smi\n",
@@ -50,7 +52,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mon Jun 21 19:59:46 2021       \n",
+            "Tue Jun 22 05:58:25 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 465.27       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -59,7 +61,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P0    26W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+            "| N/A   39C    P0    27W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -107,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ReNdr2UuCZX9",
-        "outputId": "3a74becc-b5ff-4196-dca0-bb40d995374f"
+        "outputId": "30071862-3cec-492c-f079-12b05cddd8e6"
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -135,7 +137,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0f13171-4178-4555-933d-85684bab561f"
+        "outputId": "0cde5851-4230-445a-eae7-1609c5734002"
       },
       "source": [
         "!pip list | grep tensorflow"
@@ -164,7 +166,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc83658d-0897-47ff-8a80-b6687fc1daed"
+        "outputId": "a24f7150-7857-4972-9019-abfaefd28a25"
       },
       "source": [
         "# setup drive\n",
@@ -201,7 +203,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "58961495-74fd-420e-a5e4-e4f5274f268c"
+        "outputId": "64aeceaa-584a-4f3b-87cf-cd5b4e9780fc"
       },
       "source": [
         "#changing the working directory\n",
@@ -245,9 +247,9 @@
         "id": "eUiMrvJLquzQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 204
         },
-        "outputId": "0616634d-cab5-4386-b8d5-001651a09dca"
+        "outputId": "931eb189-5ef4-4864-f946-6de881d7f670"
       },
       "source": [
         "# Load the csv back in to a dataframe\n",
@@ -376,7 +378,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6cc488af-b5a8-4a5b-df52-a4fa18016a1c"
+        "outputId": "95b59732-6799-49ec-f713-0fdbe0529ced"
       },
       "source": [
         "# install pydicom\n",
@@ -389,7 +391,7 @@
           "text": [
             "Collecting pydicom\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f4/15/df16546bc59bfca390cf072d473fb2c8acd4231636f64356593a63137e55/pydicom-2.1.2-py3-none-any.whl (1.9MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.9MB 13.8MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.9MB 4.3MB/s \n",
             "\u001b[?25hInstalling collected packages: pydicom\n",
             "Successfully installed pydicom-2.1.2\n"
           ],
@@ -455,7 +457,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cae0762a-42c9-4f4c-dd58-c0841678e341"
+        "outputId": "10717308-f524-4d8a-8103-88a1c9f33840"
       },
       "source": [
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
@@ -510,7 +512,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9802081a-8e4e-445b-f09b-b1db960b034e"
+        "outputId": "0e39ee53-9585-4b1b-a506-c12e19637ee3"
       },
       "source": [
         "\n",
@@ -568,7 +570,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5093bf0-ebb3-42e5-840d-b940a21257c3"
+        "outputId": "555f2952-04b5-4b66-d8c6-e43a3d413b76"
       },
       "source": [
         "from keras.applications.resnet50 import ResNet50\n",
@@ -580,7 +582,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "94773248/94765736 [==============================] - 1s 0us/step\n"
+            "94773248/94765736 [==============================] - 2s 0us/step\n"
           ],
           "name": "stdout"
         }
@@ -621,7 +623,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "flyMYHkfG8Rc",
-        "outputId": "ded8f798-23b6-4df9-d1e2-200bfe232a59"
+        "outputId": "2ce9f5a0-7812-4d80-f030-8020f9c9392c"
       },
       "source": [
         "%%time\n",
@@ -633,8 +635,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 37.8 s, sys: 2.27 s, total: 40.1 s\n",
-            "Wall time: 20min 41s\n"
+            "CPU times: user 39.4 s, sys: 2.6 s, total: 42 s\n",
+            "Wall time: 27min 47s\n"
           ],
           "name": "stdout"
         }
@@ -644,67 +646,167 @@
       "cell_type": "code",
       "metadata": {
         "id": "uwOCcekqSPRg",
-        "outputId": "49cccb2c-476a-46c2-8937-8253a7fcc214",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e7874b71-6f2f-412b-f070-b130526bfe4b"
       },
       "source": [
         "print(y_pred.shape)\n",
         "y_prediction = np.argmax(y_pred, axis=-1)\n"
       ],
-      "execution_count": 29,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(2654, 2)\n",
-            "[0 0 0 ... 0 1 0]\n"
+            "(2654, 2)\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "myRqESmgSpmv"
+      },
       "source": [
         "### Compute precision, and recall"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
-    },
-    {
-      "source": [
-        "$$precision =\\frac{TP}{(TP + FP)}$$\n",
-        "\n",
-        "$$recall= \\frac{TP}{(TP+FN)}$$"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "BN7SrcEHSpmv",
+        "outputId": "209848b7-fc58-405a-88d8-590fbbcea5a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "source": [
         "TP = 0.\n",
         "TN = 0.\n",
         "FP = 0.\n",
         "FN = 0.\n",
         "index = 0\n",
-        "while TRUE:\n",
+        "test_generator.reset()\n",
+        "\n",
+        "while index < len(test_set):\n",
         "    try:\n",
-        "        x, y = validation_generator.next()\n",
-        "        if y == y_prediction[index]:\n",
-        "            TP += 1   \n",
-        "\n",
-        "\n",
+        "        x, y = test_generator.next()             \n",
+        "        # positive       \n",
+        "        if y[0] == 1:            \n",
+        "            if y[0] == y_prediction[index]:\n",
+        "                # prediction matches true label\n",
+        "                TP += 1   \n",
+        "            else: # prediction incorrect as negative when positive                \n",
+        "                FP += 1\n",
+        "        else: # negative\n",
+        "            if y[0] == y_prediction[index]:\n",
+        "                # prediction matches negative label\n",
+        "                TN += 1\n",
+        "            else: # prediction positive when outcome negative        \n",
+        "                FN += 1        \n",
         "        index += 1\n",
         "    except StopIteration:\n",
-        "        break\n",
+        "        break    \n",
+        "\n",
+        "    #break\n",
         "\n",
         "\n",
-        "\n"
+        "print('TP %f, FP %f, TN %f, FN %f' % (TP,FP,TN,FN))\n"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TP 682.000000, FP 50.000000, TN 1901.000000, FN 21.000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BM78-oPaSpmv"
+      },
+      "source": [
+        "$$precision =\\frac{TP}{(TP + FP)}$$\n",
+        "\n",
+        "$$recall= \\frac{TP}{(TP+FN)}$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "exd9HVFiltFa"
+      },
+      "source": [
+        "* Precision can be thought of as a measure of a classifiers exactness. \n",
+        "\n",
+        "* Recall can be thought of as a measure of a classifiers completeness. A low recall indicates many False Negatives."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q5ZDo2dhgaG2",
+        "outputId": "d5e20b0a-3bd8-4d1b-a8c1-6d4db2c4d927",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "precision = TP/(TP+FP)\n",
+        "recall = TP/(TP+FN)\n",
+        "print('Precision %f, Recall %f' % (precision,recall))"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Precision 0.931694, Recall 0.970128\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zGNeIx1ek3_n"
+      },
+      "source": [
+        "$$F_1=\\frac{TP}{TP+\\frac{1}{2}(FP+FN)}$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8aE9oCqnlQAk",
+        "outputId": "b53c0920-35a5-4a45-f84f-47f1b3926791",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "F1 = TP / (TP + 1/2 *(FP+FN))\n",
+        "\n",
+        "print('F1 score %f' % F1)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "F1 score 0.950523\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -717,7 +819,7 @@
         "\n",
         "fpr_keras, tpr_keras, thresholds_keras = roc_curve(test_set['label'], y_prediction, pos_label='1')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +844,7 @@
         "from keras.applications.vgg16 import VGG16\n",
         "vgg16BaseModel = VGG16(weights='imagenet',include_top=False, input_shape=(img_width, img_height, 3))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +887,7 @@
         "\n",
         "modelVgg16.load_weights(filepath='/content/gdrive/MyDrive/C19/vggModel')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,17 +907,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "u3HUA8ulW06R",
-        "outputId": "8e592efe-c373-4fe3-be9d-a40324221722",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8e592efe-c373-4fe3-be9d-a40324221722"
       },
       "source": [
         "%%time\n",
         "# Run predictions on training set\n",
         "y_pred_vgg16 = modelVgg16.predict(test_generator)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,16 +933,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "-l2JCoyHXsnx",
-        "outputId": "c8065cdc-b3cc-4b72-9f4d-b0a7dd417701",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8065cdc-b3cc-4b72-9f4d-b0a7dd417701"
       },
       "source": [
         "print(y_pred_vgg16.shape)\n",
         "y_prediction_vgg16 = np.argmax(y_pred_vgg16, axis=-1)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +962,7 @@
         "# compute false positive and true positive rates\n",
         "fpr_vgg, tpr_vgg, thresholds_keras_vgg = roc_curve(test_set['label'], y_prediction_vgg16, pos_label='1')"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -882,18 +984,18 @@
         "auc_keras = auc(fpr_keras, tpr_keras)\n",
         "auc_vgg = auc(fpr_vgg, tpr_vgg)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "WDum9a5xWTch",
-        "outputId": "96da82c0-7b9c-4c35-bfdb-ae83531fa9ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "outputId": "96da82c0-7b9c-4c35-bfdb-ae83531fa9ed"
       },
       "source": [
         "plt.figure(1)\n",
@@ -918,7 +1020,7 @@
         "plt.legend(loc='best')\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
